@startuml

title __INCOMING_DATA's Class Diagram__\n

  namespace  {
    namespace om.example.piper.piperchat {
      namespace incoming_data {
        class com.example.piper.piperchat.incoming_data.NewGroup {
            - admin : String
            - createdBy : String
            - name : String
            - participants : List<String>
            + NewGroup()
            + equals()
            + getAdmin()
            + getCreatedBy()
            + getName()
            + getParticipants()
            + getRoomType()
            + hashCode()
            + setAdmin()
            + setCreatedBy()
            + setName()
            + setParticipants()
            + setRoomType()
            + toString()
            # canEqual()
        }
      }
    }
  }
  

  namespace  {
    namespace om.example.piper.piperchat {
      namespace incoming_data {
        class com.example.piper.piperchat.incoming_data.NewMessage {
            - roomId : long
            - sender : String
            - text : String
            + NewMessage()
            + equals()
            + getRoomId()
            + getSender()
            + getText()
            + hashCode()
            + setRoomId()
            + setSender()
            + setText()
            + toString()
            # canEqual()
        }
      }
    }
  }
  

  namespace  {
    namespace om.example.piper.piperchat {
      namespace incoming_data {
        class com.example.piper.piperchat.incoming_data.NewRoom {
            - alternateRoomName : String
            - createdBy : String
            - name : String
            - participants : List<String>
            + NewRoom()
            + equals()
            + getAlternateRoomName()
            + getCreatedBy()
            + getName()
            + getParticipants()
            + getRoomType()
            + hashCode()
            + setAlternateRoomName()
            + setCreatedBy()
            + setName()
            + setParticipants()
            + setRoomType()
            + toString()
            # canEqual()
        }
      }
    }
  }
  

  namespace  {
    namespace om.example.piper.piperchat {
      namespace incoming_data {
        class com.example.piper.piperchat.incoming_data.Notification {
            - from : String
            - to : String
            - type : String
            + Notification()
            + equals()
            + getData()
            + getFrom()
            + getTo()
            + getType()
            + hashCode()
            + setData()
            + setFrom()
            + setTo()
            + setType()
            + toString()
            # canEqual()
        }
      }
    }
  }
  

  namespace  {
    namespace om.example.piper.piperchat {
      namespace incoming_data {
        class com.example.piper.piperchat.incoming_data.UserRegistrationDetails {
            - confirmPassword : String
            - email : String
            - fullName : String
            - password : String
            - username : String
            + UserRegistrationDetails()
            + equals()
            + getConfirmPassword()
            + getEmail()
            + getFullName()
            + getPassword()
            + getUsername()
            + hashCode()
            + setConfirmPassword()
            + setEmail()
            + setFullName()
            + setPassword()
            + setUsername()
            + toString()
            # canEqual()
        }
      }
    }
  }
  

  com.example.piper.piperchat.incoming_data.NewGroup o-- com.example.piper.piperchat.model.RoomType : roomType
  com.example.piper.piperchat.incoming_data.NewRoom o-- com.example.piper.piperchat.model.RoomType : roomType
  com.example.piper.piperchat.incoming_data.Notification o-- com.example.piper.piperchat.DTO.RoomDTO : data


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
